# backups2datalad

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
src/backups2datalad/: __init__.py  __main__.py  adandi.py  adataset.py  aioutil.py  annex.py  asyncer.py  blob.py  config.py  consts.py  datasetter.py  manager.py  register_s3.py  syncer.py  util.py  zarr.py
test/: conftest.py  test_adataset_annex.py  test_commands.py  test_core.py  test_util.py  test_zarr.py  test_zarrbargo.py
test/data/dandiarchive-docker/: docker-compose.yml
